# citra

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/binary_translation/: CodeGen.cpp  ModuleGen.cpp
src/citra/: CMakeLists.txt
src/core/: CMakeLists.txt  mem_map_funcs.cpp
src/core/arm/dyncom/: arm_dyncom_interpreter.cpp
src/core/arm/jit/: Jit.cpp  Jit.h
src/core/binary_translation/: BinaryTranslationLoader.cpp
src/core/loader/: loader.cpp  loader.h  ncch.cpp
src/opt/: Branch.cpp  Branch.h  CMakeLists.txt  Cmp.cpp  Cmp.h  CodeBlock.cpp  CodeBlock.h  Codegen.cpp  Codegen.h  Decode.cpp  Decode.h  Instruction.cpp  Instruction.h  Instructions.h  Ldr.cpp  Ldr.h  Mov.cpp  Mov.h  main.cpp
src/opt/Instructions/: Arith.cpp  Arith.h  Branch.cpp  Branch.h  Cmp.cpp  Cmp.h  Ldr.cpp  Ldr.h  Mov.cpp  Mov.h
